--- a/index.html
+++ b/index.html
@@ -1,28 +1,58 @@
 <!DOCTYPE html>
-<html>
-
-
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>M8AX - Firmware NerdMinerV2</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            color: #333;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            max-width: 500px;
+        }
+        .note {
+            color: red;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+        span {
+            display: block;
+            margin-top: 10px;
+        }
+    </style>
+</head>
 <body>
-    <h1>Sample project for demoing ESP Web Tools</h1>
-
-    <div id="main" style="display: none;">
-
-        <br>
-        <script
-            type="module"
-            src="https://unpkg.com/esp-web-tools@7.3.1/dist/web/install-button.js?module">
-        </script>
-        <esp-web-install-button id="installButton" manifest="webflash/manifest.json"></esp-web-install-button>
-        <br>
-        <span>NOTE: Make sure to close anything using your devices com port (e.g. Serial monitor)</span>
+    <div class="container">
+        <h1>M8AX - Firmware NerdMinerV2</h1>
+        <p class="note">Antes De Nada Asegúrate De Poner Tu NerdminerV2 En Modo De Programación, Pulsar Botón De Abajo Del NerdMinerV2 Y Conectar Al USB...</p>
+        <div id="main" style="display: none;">
+            <script type="module" src="https://unpkg.com/esp-web-tools@7.3.1/dist/web/install-button.js?module"></script>
+            <esp-web-install-button id="installButton" manifest="webflash/manifest.json"></esp-web-install-button>
+            <span>NOTA: Asegúrate De Cerrar Cualquier Programa Que Esté Usando El Puerto COM De Tu Dispositivo (Por Ejemplo, El Monitor Serie).</span>
+        </div>
+        <div id="notSupported" style="display: none;">
+            <p>Tu navegador no es compatible con la API Web Serial. Prueba con Chrome.</p>
+        </div>
     </div>
-    <div id="notSupported" style="display: none;">
-        Your browser does not support the Web Serial API. Try Chrome
-    </div>
-    
-
     <script>
-        if(navigator.serial){
+        if (navigator.serial) {
             document.getElementById("notSupported").style.display = 'none';
             document.getElementById("main").style.display = 'block';
         } else {
@@ -30,7 +60,5 @@
             document.getElementById("main").style.display = 'none';
         }
     </script>
-
 </body>
-
 </html>
