--- a/index.html
+++ b/index.html
@@ -1,58 +1,28 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M8AX - Firmware NerdMinerV2</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        h1 {
-            color: #333;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 80%;
-            max-width: 500px;
-        }
-        .note {
-            color: red;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-        span {
-            display: block;
-            margin-top: 10px;
-        }
-    </style>
-</head>
+<html>
+
+
 <body>
-    <div class="container">
-        <h1>M8AX - Firmware NerdMinerV2</h1>
-        <p class="note">Antes De Nada Asegúrate De Poner Tu NerdminerV2 En Modo De Programación, Pulsar Botón De Abajo Del NerdMinerV2 Y Conectar Al USB...</p>
-        <div id="main" style="display: none;">
-            <script type="module" src="https://unpkg.com/esp-web-tools@7.3.1/dist/web/install-button.js?module"></script>
-            <esp-web-install-button id="installButton" manifest="webflash/manifest.json"></esp-web-install-button>
-            <span>NOTA: Asegúrate De Cerrar Cualquier Programa Que Esté Usando El Puerto COM De Tu Dispositivo (Por Ejemplo, El Monitor Serie).</span>
-        </div>
-        <div id="notSupported" style="display: none;">
-            <p>Tu navegador no es compatible con la API Web Serial. Prueba con Chrome.</p>
-        </div>
+    <h1>M8AX - Firmware NerdMinerV2</h1>
+
+    <div id="main" style="display: none;">
+
+        <br>
+        <script
+            type="module"
+            src="https://unpkg.com/esp-web-tools@7.3.1/dist/web/install-button.js?module">
+        </script>
+        <esp-web-install-button id="installButton" manifest="webflash/manifest.json"></esp-web-install-button>
+        <br>
+        <span>NOTA: Asegúrate De Cerrar Cualquier Programa Que Esté Usando El Puerto COM De Tu Dispositivo ( Por Ejemplo, El Monitor Serie ).</span>
     </div>
+    <div id="notSupported" style="display: none;">
+        Tu navegador No Es Compatible Con La API Web Serial. Prueba Con Chrome.
+    </div>
+    
+
     <script>
-        if (navigator.serial) {
+        if(navigator.serial){
             document.getElementById("notSupported").style.display = 'none';
             document.getElementById("main").style.display = 'block';
         } else {
@@ -60,5 +30,7 @@
             document.getElementById("main").style.display = 'none';
         }
     </script>
+
 </body>
+
 </html>
