--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <body>
-    <h1>M8AX - Firmware NerdMinerV2</h1>
+    <h1>ESP Web Tool Demo</h1>
 
     <div id="main" style="display: none;">
 
