--- a/index.html
+++ b/index.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M8AX - NerdMinerV2 Firmware UPDATE</title>
+    <title>M8AX - NerdMinerV2 - M8AX Firmware UPDATE</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f4f4f4;
+            background-color: #1a1a1a;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
+            position: relative;
         }
         h1 {
-            color: #333;
+            color: #00000;
         }
         .container {
-            background: white;
+            background: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
             width: 80%;
             max-width: 500px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            position: relative;
+            z-index: 1;
         }
         .note {
             color: red;
@@ -36,22 +43,192 @@
             display: block;
             margin-top: 10px;
         }
+        .header-image {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .header-image img {
+            max-width: 100%;
+            height: auto;
+        }
+        .footer-image {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .footer-image img {
+            max-width: 100%;
+            height: auto;
+        }
+        /* Estilos para el fondo de partículas */
+        #particles-js {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+        }
+        /* Estilos para la imagen en la esquina inferior izquierda */
+        .corner-image {
+            position: fixed; /* Fija la imagen en la pantalla */
+            bottom: 10px; /* Distancia desde la parte inferior */
+            left: 10px; /* Distancia desde la izquierda */
+            width: 100px; /* Tamaño cuadrado */
+            height: 100px; /* Tamaño cuadrado */
+            z-index: 2; /* Asegura que esté por encima del fondo de partículas */
+            border-radius: 10px; /* Bordes redondeados (opcional) */
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Sombra (opcional) */
+        }
+        .corner-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ajusta la imagen al tamaño del contenedor */
+            border-radius: 10px; /* Bordes redondeados (opcional) */
+        }
     </style>
 </head>
 <body>
+    <!-- Fondo de partículas animadas -->
+    <div id="particles-js"></div>
+
+    <!-- Imagen en la esquina inferior izquierda -->
+    <div class="corner-image">
+        <img src="webflash/m8ax.png" alt="Imagen en la esquina">
+    </div>
+
     <div class="container">
+        <div class="header-image">
+            <img src="webflash/pantallas.jpg" alt="Pantallas Del M8AX - NerdMinerV2 - M8AX">
+        </div>
+    <!-- Botón para descargar el manual -->
+    <a id="downloadManual" href="webflash/M8AX-NerdMinerV2-M8AX-Manual.pdf" download>
+    <button>Descargar Manual PDF De M8AX - NerdMinerV2 - M8AX</button></p>
+
+    </a>
+    <button id="playButton">Reproducir Canción: M8AX - NerdMinerV2 - M8AX</button>
+
+    <script>
+      document.getElementById('playButton').addEventListener('click', function() {
+         const audio = document.getElementById('backgroundAudio');
+         audio.play();  // Reproducir el audio cuando el usuario haga clic
+         audio.volume = 0.5;  // Ajustar volumen si es necesario
+         this.style.display = 'none';  // Ocultar el botón después de hacer clic
+      });
+    </script>
+
         <h1>M8AX - Firmware NerdMinerV2</h1>
-        <p class="note">Antes De Nada Asegúrate De Poner Tu NerdminerV2 En Modo De Programación, Pulsar Botón De Abajo Del NerdMinerV2 Y Conectar Al USB...</p>
+        <p class="note">Antes De Nada, Asegúrate De Poner Tu NerdminerV2 En Modo De Programación, Pulsar El Botón 2 'De Abajo' Del NerdMinerV2, Conectar El USB Y Soltar El Botón Tras Dos Segundos...</p>
         <div id="main" style="display: none;">
             <script type="module" src="https://unpkg.com/esp-web-tools@10.1.0/dist/web/install-button.js?module"></script>
             <esp-web-install-button id="installButton" manifest="webflash/manifest.json"></esp-web-install-button>
-            <span>NOTA: Asegúrate De Cerrar Cualquier Programa Que Esté Usando El Puerto COM De Tu Dispositivo (Por Ejemplo, El Monitor Serie).</span>
+            <span>NOTA: Asegúrate De Cerrar Cualquier Programa Que Esté Usando El Puerto COM De Tu Dispositivo ( Por Ejemplo, El Monitor Serie ).</span>
         </div>
         <div id="notSupported" style="display: none;">
-            <p>Tu navegador no es compatible con la API Web Serial. Prueba con Chrome.</p>
+            <p>Tu Navegador No Es Compatible Con La API Web Serial. Prueba Con Chrome.</p>
+        </div>
+        <div class="footer-image">
+            <img src="webflash/M8AXNMV2.png" alt="M8AX - NerdMinerV2 - M8AX">
         </div>
     </div>
+
+    <!-- Script para el fondo de partículas -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
+        // Configuración del fondo de partículas
+        particlesJS("particles-js", {
+            particles: {
+                number: {
+                    value: 80,
+                    density: {
+                        enable: true,
+                        value_area: 800
+                    }
+                },
+                color: {
+                    value: "#ffffff"
+                },
+                shape: {
+                    type: "circle",
+                    stroke: {
+                        width: 0,
+                        color: "#000000"
+                    },
+                    polygon: {
+                        nb_sides: 5
+                    }
+                },
+                opacity: {
+                    value: 0.5,
+                    random: true,
+                    anim: {
+                        enable: true,
+                        speed: 1,
+                        opacity_min: 0.1,
+                        sync: false
+                    }
+                },
+                size: {
+                    value: 3,
+                    random: true,
+                    anim: {
+                        enable: true,
+                        speed: 2,
+                        size_min: 0.1,
+                        sync: false
+                    }
+                },
+                line_linked: {
+                    enable: true,
+                    distance: 150,
+                    color: "#ff0000",
+                    opacity: 0.4,
+                    width: 1
+                },
+                move: {
+                    enable: true,
+                    speed: 3,
+                    direction: "none",
+                    random: true,
+                    straight: false,
+                    out_mode: "bounce",
+                    bounce: true,
+                    attract: {
+                        enable: false,
+                        rotateX: 600,
+                        rotateY: 1200
+                    }
+                }
+            },
+            interactivity: {
+                detect_on: "canvas",
+                events: {
+                    onhover: {
+                        enable: true,
+                        mode: "bubble"
+                    },
+                    onclick: {
+                        enable: true,
+                        mode: "push"
+                    },
+                    resize: true
+                },
+                modes: {
+                    bubble: {
+                        distance: 200,
+                        size: 6,
+                        duration: 2,
+                        opacity: 0.8,
+                        speed: 3
+                    },
+                    push: {
+                        particles_nb: 4
+                    }
+                }
+            },
+            retina_detect: true
+        });
+
+        // Verificar compatibilidad con la API Web Serial
         if (navigator.serial) {
             document.getElementById("notSupported").style.display = 'none';
             document.getElementById("main").style.display = 'block';
@@ -59,6 +236,18 @@
             document.getElementById("notSupported").style.display = 'block';
             document.getElementById("main").style.display = 'none';
         }
+    </script>
+
+    <!-- Audio de fondo que se repite constantemente -->
+    <audio id="backgroundAudio" autoplay loop>
+        <source src="webflash/m8ax.mp3" type="audio/mpeg">
+        Tu navegador no soporta la etiqueta de audio.
+    </audio>
+
+    <!-- Opcional: Control de volumen con JavaScript -->
+    <script>
+        // Ajustar el volumen del audio (0.0 a 1.0)
+        document.getElementById('backgroundAudio').volume = 0.5; // 50% de volumen
     </script>
 </body>
 </html>
