arreglado error en index.html, no salia una imagen

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 </span> </p><br>
 		<div class="button-container">
 			<div>
-				<img src="webflash/NMV2.png" alt="NerdMiner V2" title="NerdMiner V2" style="width: 100px; height: 50px; display: block; margin: 0 auto;">
+				<img src="webflash/nmv2.png" alt="NerdMiner V2" title="NerdMiner V2" style="width: 100px; height: 50px; display: block; margin: 0 auto;">
 				<br>
 				<esp-web-install-button manifest="webflash/manifest1.json"></esp-web-install-button>
 			</div>
